fix: layout on related products header on product pages on small viewport

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -140,6 +140,9 @@ button.reset-selection-button
   align-items: center
   margin-bottom: 32px
 
+  @media screen and (max-width: $break-small)
+    display: block
+
   .related-products-view-all-link
     margin-left: auto
 
